kubernetes/services/memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-nginx
  namespace: services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos-nginx
  template:
    metadata:
      labels:
        app: memos-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-config
          configMap:
            name: memos-nginx-config
