kubernetes/services/memos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos-nginx
  namespace: services
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: memos-nginx
